--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.image-size {
+  display: flex;
+  justify-content: center;
+  width: 300px !important;
+}
